--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ Thumbs.db
 ehthumbs.db
 ehthumbs_vista.db
 
+# node modules
+# reference: https://stackoverflow.com/questions/29820791/git-ignore-node-modules-folder-everywhere
+node_modules/
+
 # Folder config file
 Desktop.ini
 
