--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "16.8.6",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "reactjs-popup": "^1.3.2"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
