--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
-    "react": "16.8.6",
+    "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-datepicker": "^2.4.0",
     "react-dom": "16.8.6",
+    "react-redux": "^7.0.3",
     "react-scripts": "2.1.8",
     "react-select": "^2.4.3",
-    "reactjs-popup": "^1.3.2"
+    "reactjs-popup": "^1.3.2",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
