--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-datepicker": "^2.4.0",
     "react-dom": "16.8.6",
+    "react-modal": "^3.8.1",
     "react-scripts": "2.1.8",
     "react-select": "^2.4.3",
     "reactjs-popup": "^1.3.2"
