--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@y0c/react-datepicker": "^1.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-datepicker": "^2.4.0",
     "react-dom": "16.8.6",
-    "react-redux": "^7.0.3",
+    "react-infinite-calendar": "^2.3.1",
     "react-modal": "^3.8.1",
+    "react-redux": "^7.0.3",
     "react-scripts": "2.1.8",
     "react-select": "^2.4.3",
     "reactjs-popup": "^1.3.2",
