--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "@y0c/react-datepicker": "^1.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
@@ -11,6 +12,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-datepicker": "^2.4.0",
+    "react-day-picker": "^7.3.0",
     "react-dom": "16.8.6",
     "react-infinite-calendar": "^2.3.1",
     "react-modal": "^3.8.1",
