--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-datepicker": "^2.4.0",
     "react-day-picker": "^7.3.0",
     "react-dom": "16.8.6",
+    "react-draggable": "^3.3.0",
     "react-infinite-calendar": "^2.3.1",
     "react-modal": "^3.8.1",
     "react-redux": "^7.0.3",
