--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@material-ui/pickers": "^3.0.0-beta.1",
     "@y0c/react-datepicker": "^1.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
