--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.5",
     "@material-ui/core": "^v4.0.0-beta.0",
+    "@material-ui/icons": "^3.0.2",
     "@material-ui/pickers": "^3.0.0-beta.1",
     "@y0c/react-datepicker": "^1.0.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "date-fns": "^2.0.0-alpha.27",
+    "graphql-react": "^8.2.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
