--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/pickers": "^3.0.0-beta.1",
     "@y0c/react-datepicker": "^1.0.1",
+    "apollo-boost": "^0.3.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "date-fns": "^2.0.0-alpha.27",
+    "graphql": "^14.3.0",
     "graphql-react": "^8.2.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-apollo": "^2.5.5",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-datepicker": "^2.4.0",
     "react-day-picker": "^7.3.0",
