'watch' command to make production build

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ ehthumbs_vista.db
 # node modules
 # reference: https://stackoverflow.com/questions/29820791/git-ignore-node-modules-folder-everywhere
 node_modules/
+build/
 
 # Folder config file
 Desktop.ini
