ui enhancemens done

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://127.0.0.1/vet-dashboard/build",
+  "homepage": "./",
   "name": "vet-dashboard",
   "version": "0.1.0",
   "private": true,
