--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-  "homepage": "./",
-  "name": "vet-dashboard",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@date-io/date-fns": "^1.3.5",
-    "@material-ui/core": "^v4.0.0-beta.0",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/pickers": "^3.0.0-beta.1",
-    "@y0c/react-datepicker": "^1.0.1",
-    "apollo-boost": "^0.3.1",
-    "axios": "^0.18.0",
-    "bootstrap": "^4.3.1",
-    "date-fns": "^2.0.0-alpha.27",
-    "graphql": "^14.3.0",
-    "graphql-react": "^8.2.0",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-apollo": "^2.5.5",
-    "react-bootstrap": "^1.0.0-beta.8",
-    "react-datepicker": "^2.4.0",
-    "react-day-picker": "^7.3.0",
-    "react-dom": "16.8.6",
-    "react-draggable": "^3.3.0",
-    "react-infinite-calendar": "^2.3.1",
-    "react-modal": "^3.8.1",
-    "react-redux": "^7.0.3",
-    "react-scripts": "2.1.8",
-    "react-select": "^2.4.3",
-    "reactjs-popup": "^1.3.2",
-    "redux": "^4.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "jest",
-    "test0": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "jest": "23.6.0"
-  }
+    "homepage": ".",
+    "name": "vet-dashboard",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@date-io/date-fns": "^1.3.5",
+        "@material-ui/core": "^v4.0.0-beta.0",
+        "@material-ui/icons": "^3.0.2",
+        "@material-ui/pickers": "^3.0.0-beta.1",
+        "@y0c/react-datepicker": "^1.0.1",
+        "apollo-boost": "^0.3.1",
+        "axios": "^0.18.0",
+        "bootstrap": "^4.3.1",
+        "date-fns": "^2.0.0-alpha.27",
+        "graphql": "^14.3.0",
+        "graphql-react": "^8.2.0",
+        "node-sass": "^4.12.0",
+        "react": "^16.8.6",
+        "react-addons-css-transition-group": "^15.6.2",
+        "react-apollo": "^2.5.5",
+        "react-bootstrap": "^1.0.0-beta.8",
+        "react-datepicker": "^2.4.0",
+        "react-day-picker": "^7.3.0",
+        "react-dom": "16.8.6",
+        "react-draggable": "^3.3.0",
+        "react-infinite-calendar": "^2.3.1",
+        "react-modal": "^3.8.1",
+        "react-redux": "^7.0.3",
+        "react-scripts": "2.1.8",
+        "react-select": "^2.4.3",
+        "reactjs-popup": "^1.3.2",
+        "redux": "^4.0.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "postbuild": "cp -rf build/* ../public/ui && mv ../public/ui/index.html ../public/ui/index.php ",
+        "test": "jest",
+        "test0": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ],
+    "devDependencies": {
+        "jest": "23.6.0"
+    }
 }
