--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "react-scripts": "2.1.8",
         "react-select": "^2.4.3",
         "reactjs-popup": "^1.3.2",
-        "redux": "^4.0.1"
+        "redux": "^4.0.1",
+        "yarn-install": "^1.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
