--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "date-fns": "^2.0.0-alpha.27",
         "graphql": "^14.3.0",
         "graphql-react": "^8.2.0",
+        "material-table": "^1.39.0",
         "mui-datatables": "^2.3.0",
         "node-sass": "^4.12.0",
         "react": "^16.8.6",
