--- a/src/config-data/sample-trackerConfig.json
+++ b/src/config-data/sample-trackerConfig.json
@@ -11,7 +11,7 @@
                     {
                         "id" : 5, //user-id
                         "read" : true,
-                        "write": true
+                        "write": false
                     }
                 ],
                 "rules": []
