nugs fixed in naimg mismatching

--- a/src/config-data/trackersConfig.json
+++ b/src/config-data/trackersConfig.json
@@ -42,7 +42,7 @@
                     {
                         "id" : 5, 
                         "read" : true,
-                        "write": false
+                        "write": true
                     }
                 ],
                 "rules": [
