--- a/src/config-data/trackersConfig.json
+++ b/src/config-data/trackersConfig.json
@@ -4,12 +4,12 @@
         "name": "Independent",
         "columns": [
             {
-                "colId": 1, 
+                "id": 1, 
                 "name": "Clinic Name",
                 "type": 1, 
                 "permissions": [
                     {
-                        "id" : 5, 
+                        "userId" : 5, 
                         "read" : false,
                         "write": false
                     }
@@ -17,17 +17,17 @@
                 "rules": []
             },
             {
-                "colId": 4, 
+                "id": 4, 
                 "name": "RF Sent Date",
                 "type": 4,
                 "permissions": [
                     {
-                        "id" : 5, 
+                        "userId" : 5, 
                         "read" : true,
                         "write": false
                     },
                     {
-                        "id" : 6, 
+                        "userId" : 6, 
                         "read" : true,
                         "write": false
                     }
@@ -35,12 +35,12 @@
                 "rules":[]
             },
             {
-                "colId": 5, 
+                "id": 5, 
                 "name": "RF Completed Date",
                 "type": 4, 
                 "permissions": [
                     {
-                        "id" : 5, 
+                        "userId" : 5, 
                         "read" : true,
                         "write": true
                     }
@@ -67,22 +67,22 @@
         "name": "IVC1",
         "columns": [
             {
-                "colId": 1, 
+                "id": 1, 
                 "name": "Clinic Name",
                 "type": 1, 
                 "permissions": [
                     {
-                        "id" : 5, 
+                        "userId" : 5, 
                         "read" : true,
                         "write": true
                     },
                     {
-                        "id" : 6, 
+                        "userId" : 6, 
                         "read" : true,
                         "write": true
                     },
                     {
-                        "id" : 1, 
+                        "userId" : 1, 
                         "read" : true,
                         "write": true
                     }
@@ -90,12 +90,12 @@
                 "rules": []
             },
             {
-                "colId": 4, 
+                "id": 4, 
                 "name": "RF Sent Date",
                 "type": 4,
                 "permissions": [
                     {
-                        "id" : 5, 
+                        "userId" : 5, 
                         "read" : true,
                         "write": false
                     }
@@ -103,12 +103,12 @@
                 "rules":[]
             },
             {
-                "colId": 5,
+                "id": 5,
                 "name": "RF Completed Date",
                 "type": 4, 
                 "permissions": [
                     {
-                        "id" : 5, 
+                        "userId" : 5, 
                         "read" : true,
                         "write": true
                     }
