--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "graphql": "^14.3.0",
         "graphql-react": "^8.2.0",
         "material-table": "^1.39.0",
+        "moment": "^2.24.0",
         "mui-datatables": "^2.3.0",
         "node-sass": "^4.12.0",
         "react": "^16.8.6",
@@ -28,6 +29,7 @@
         "react-draggable": "^3.3.0",
         "react-infinite-calendar": "^2.3.1",
         "react-modal": "^3.8.1",
+        "react-moment": "^0.9.2",
         "react-redux": "^7.0.3",
         "react-scripts": "2.1.8",
         "react-select": "^2.4.3",
