--- a/src/config-data/trackersConfig.json
+++ b/src/config-data/trackersConfig.json
@@ -82,7 +82,15 @@
                         "write": true
                     }
                 ],
-                "rules": []
+                "rules": [
+                    {
+                        "precedence": 1,
+                        "bgcolor" : "orange",
+                        "conditions": "moment().endOf('day').fromNow()",
+                        "conditions2": "moment().isAfter(moment(valueOfColumn(4)).add('3 days')",
+                        "comment": "this is to test the eval function"
+                    }
+                ]
             }
         ]
 
