--- a/src/config-data/trackersConfig.json
+++ b/src/config-data/trackersConfig.json
@@ -52,9 +52,14 @@
                         "conditions": "moment().isAfter(moment(valueOfColumn(4)).add('3 days')"
                     },
                     {
+                        "precedence": 3,
+                        "bgcolor" : "blue",
+                        "conditions": "moment().isAfter(moment(valueOfColumn(4)).add('6 days')"
+                    },
+                    {
                         "precedence": 2,
                         "bgcolor" : "red",
-                        "conditions": "moment().isAfter(moment(valueOfColumn(4).add('5 days')"
+                        "conditions": "moment().isAfter(moment(valueOfColumn(4)).add('5 days')"
                     }
                 ]
             },
