not re-rendering issue debugging, code refactoring

--- a/src/config-data/trackersConfig.json
+++ b/src/config-data/trackersConfig.json
@@ -59,7 +59,7 @@
                     {
                         "precedence": 2,
                         "bgcolor" : "red",
-                        "conditions": "Date.now"
+                        "conditions": "moment().endOf('day').fromNow()"
                     }
                 ]
             },
