--- a/src/config-data/trackersConfig.json
+++ b/src/config-data/trackersConfig.json
@@ -1,6 +1,6 @@
 [
     {
-        "trackerId" : 1, 
+        "tracker_id" : 1, 
         "name": "Independent",
         "columns": [
             {
