--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-redux": "^7.0.3",
         "react-scripts": "2.1.8",
         "react-select": "^2.4.3",
+        "react-sticky-table": "^3.1.0",
         "reactjs-popup": "^1.3.2",
         "redux": "^4.0.1",
         "yarn-install": "^1.0.0"
