--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@material-ui/core": "^v4.0.0-beta.0",
         "@material-ui/icons": "^3.0.2",
         "@material-ui/pickers": "^3.0.0-beta.1",
+        "@types/pegjs": "^0.10.1",
         "@y0c/react-datepicker": "^1.0.1",
         "apollo-boost": "^0.3.1",
         "axios": "^0.18.0",
@@ -20,6 +21,7 @@
         "moment": "^2.24.0",
         "mui-datatables": "^2.3.0",
         "node-sass": "^4.12.0",
+        "pegjs": "^0.10.0",
         "react": "^16.8.6",
         "react-addons-css-transition-group": "^15.6.2",
         "react-apollo": "^2.5.5",
