after the code refactoring

--- a/src/config-data/trackersConfig.json
+++ b/src/config-data/trackersConfig.json
@@ -1,96 +1,120 @@
 [
     {
-        "id" : 1, 
+        "tracker_id" : 1, 
         "name": "Independent",
         "columns": [
             {
-                "id": 1, 
-                "name": "Clinic Name",
-                "type": 1, 
+                "id": 1,
+                "name": "clinicName",
+                "label": "Clinic Name",
+                "type": 1,
                 "permissions": [
                     {
-                        "userId" : 5,
-                        "read" : false,
+                        "userId": 5,
+                        "read": false,
                         "write": false
                     }
                 ],
                 "rules": []
             },
             {
-                "id": 4, 
-                "name": "RF Sent Date",
-                "type": 4,
+                "id": 2,
+                "name": "clinicName2",
+                "label": "ClinicName2",
+                "type": 1,
                 "permissions": [
                     {
-                        "userId" : 5, 
-                        "read" : true,
+                        "userId": 5,
+                        "read": true,
                         "write": false
                     },
                     {
-                        "userId" : 6, 
-                        "read" : true,
+                        "userId": 6,
+                        "read": true,
                         "write": false
                     }
                 ],
-                "rules":[]
+                "rules": []
             },
             {
-                "id": 5, 
-                "name": "RF Completed Date",
-                "type": 4, 
+                "id": 4,
+                "name": "RFSentDate",
+                "label": "RF Sent Date",
+                "type": 4,
                 "permissions": [
                     {
-                        "userId" : 5, 
-                        "read" : true,
+                        "userId": 5,
+                        "read": true,
+                        "write": false
+                    },
+                    {
+                        "userId": 6,
+                        "read": true,
+                        "write": false
+                    }
+                ],
+                "rules": []
+            },
+            {
+                "id": 5,
+                "name": "RFCompletedDate",
+                "label": "RF Completed Date",
+                "type": 4,
+                "permissions": [
+                    {
+                        "userId": 5,
+                        "read": true,
                         "write": true
                     }
                 ],
                 "rules": [
                     {
                         "precedence": 1,
-                        "bgcolor" : "amber",
+                        "bgcolor": "amber",
                         "conditions": ""
                     },
                     {
                         "precedence": 3,
-                        "bgcolor" : "blue",
+                        "bgcolor": "blue",
                         "conditions": "3"
                     },
                     {
                         "precedence": 2,
-                        "bgcolor" : "red",
+                        "bgcolor": "red",
                         "conditions": "moment().endOf('day').fromNow()"
                     }
                 ]
             },
             {
-                "id": 6, 
-                "name": "Completed",
-                "type": 3, 
+                "id": 6,
+                "name": "completed",
+                "label": "Completed",
+                "type": 3,
                 "permissions": [
                     {
-                        "userId" : 5,
-                        "read" : true,
+                        "userId": 5,
+                        "read": true,
                         "write": true
                     }
                 ],
                 "rules": []
             },
             {
-                "id": 7, 
-                "name": "Duration",
-                "type": 2, 
+                "id": 7,
+                "name": "duration",
+                "label": "Duration",
+                "type": 2,
                 "permissions": [
                     {
-                        "userId" : 5,
-                        "read" : true,
+                        "userId": 5,
+                        "read": true,
                         "write": true
                     }
                 ],
                 "rules": [
                     {
                         "precedence": 1,
-                        "bgcolor" : "orange",
+                        "bgcolor": "orange",
                         "conditions": "8",
                         "conditions3": "moment().endOf('day').fromNow()",
                         "conditions2": "moment().isAfter(moment(valueOfColumn(4)).add('3 days')",
@@ -108,7 +132,8 @@
         "columns": [
             {
                 "id": 1, 
-                "name": "Clinic Name",
+                "name": "clinicName",
+                "label": "Clinic Name",
                 "type": 1, 
                 "permissions": [
                     {
@@ -131,7 +156,8 @@
             },
             {
                 "id": 4, 
-                "name": "RF Sent Date",
+                "name": "RFSentDate",
+                "label": "RF Sent Date",
                 "type": 4,
                 "permissions": [
                     {
@@ -144,7 +170,8 @@
             },
             {
                 "id": 5,
-                "name": "RF Completed Date",
+                "name": "RFCompletedDate",
+                "label": "RF Completed Date",
                 "type": 4, 
                 "permissions": [
                     {
@@ -157,7 +184,7 @@
                     {
                         "precedence": 1,
                         "bgcolor" : "amber",
-                        "conditions": "moment().endOf('day').fromNow()"
+                        "conditions": "new Date()"
                     },
                     {
                         "precedence": 2,
