--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@material-ui/core": "^v4.0.0-beta.0",
         "@material-ui/icons": "^3.0.2",
         "@material-ui/pickers": "^3.0.0-beta.1",
+        "@types/pegjs": "^0.10.1",
         "@y0c/react-datepicker": "^1.0.1",
         "apollo-boost": "^0.3.1",
         "axios": "^0.18.0",
@@ -16,9 +17,11 @@
         "graphql": "^14.3.0",
         "graphql-react": "^8.2.0",
         "material-table": "^1.39.0",
+        "material-ui-tree": "^2.0.1",
         "moment": "^2.24.0",
         "mui-datatables": "^2.3.0",
         "node-sass": "^4.12.0",
+        "pegjs": "^0.10.0",
         "react": "^16.8.6",
         "react-addons-css-transition-group": "^15.6.2",
         "react-apollo": "^2.5.5",
@@ -31,10 +34,12 @@
         "react-modal": "^3.8.1",
         "react-moment": "^0.9.2",
         "react-redux": "^7.0.3",
-        "react-scripts": "2.1.8",
+        "react-scripts": "^3.0.1",
         "react-select": "^2.4.3",
+        "react-sticky-table": "^3.1.0",
         "reactjs-popup": "^1.3.2",
         "redux": "^4.0.1",
+        "yarn": "^1.17.3",
         "yarn-install": "^1.0.0"
     },
     "scripts": {
@@ -54,7 +59,5 @@
         "not ie <= 11",
         "not op_mini all"
     ],
-    "devDependencies": {
-        "jest": "23.6.0"
-    }
+    "devDependencies": {}
 }
