--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@babel/preset-env": "^7.5.5",
+        "@babel/preset-react": "^7.0.0",
         "@date-io/date-fns": "^1.3.5",
         "@material-ui/core": "^v4.0.0-beta.0",
         "@material-ui/icons": "^3.0.2",
@@ -12,6 +14,7 @@
         "@y0c/react-datepicker": "^1.0.1",
         "apollo-boost": "^0.3.1",
         "axios": "^0.18.0",
+        "babel-jest": "^24.8.0",
         "bootstrap": "^4.3.1",
         "date-fns": "^2.0.0-alpha.27",
         "graphql": "^14.3.0",
@@ -37,6 +40,7 @@
         "react-scripts": "^3.0.1",
         "react-select": "^2.4.3",
         "react-sticky-table": "^3.1.0",
+        "react-test-renderer": "^16.8.6",
         "reactjs-popup": "^1.3.2",
         "redux": "^4.0.1",
         "yarn": "^1.17.3",
@@ -45,9 +49,9 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "postbuild": "cp -rf build/* ../../../public/ui && mv ../../../public/ui/index.html ../../../public/ui/index.php ",
+        "postbuild": "cp -rf build/* ../public/ui && mv ../public/ui/index.html ../public/ui/index.php ",
         "test": "jest",
-        "test0": "react-scripts test",
+        "testOld": "react-scripts test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -59,5 +63,7 @@
         "not ie <= 11",
         "not op_mini all"
     ],
-    "devDependencies": {}
+    "devDependencies": {
+        "jest": "^24.8.0"
+    }
 }
