jest installed global and vulenerabilities audited

--- a/package.json
+++ b/package.json
@@ -63,7 +63,5 @@
         "not ie <= 11",
         "not op_mini all"
     ],
-    "devDependencies": {
-        "jest": "^24.8.0"
-    }
+    "devDependencies": {}
 }
