--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
         "not ie <= 11",
         "not op_mini all"
     ],
-    "devDependencies": {}
+    "devDependencies": {
+        "@babel/core": "^7.5.5",
+        "@babel/preset-typescript": "^7.3.3"
+    }
 }
