--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-addons-css-transition-group": "^15.6.2",
         "react-apollo": "^2.5.5",
         "react-bootstrap": "^1.0.0-beta.8",
+        "react-csv": "^1.1.1",
         "react-datepicker": "^2.4.0",
         "react-day-picker": "^7.3.0",
         "react-dom": "16.8.6",
